# shopping-list

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yaml  preview.yaml
app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
app/clients/: pantry.py
app/routers/: health.py  shopping_list.py
