[project]
name = "shopping-list"
version = "0.1.0"
description = "Shopping list microservice (FastAPI + SQLAlchemy + Postgres)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "mangum>=0.19",
  "psycopg[binary]>=3.2",
  "pydantic>=2",
  "pydantic-settings>=2",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
  "pyright>=1.1.409",
  "pytest>=8",
  "ruff>=0.6",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
target-version = "py312"
